--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -10,9 +10,9 @@
 
     .project-preview {
         display: flex;
-        
+
         align-items: flex-start;
-        width:fit-content;
+        width: fit-content;
         word-wrap: break-word;
 
         margin: 0.5rem 0rem;
@@ -24,6 +24,14 @@
             font-family: Kleukens;
             margin: 0rem 0.5rem;
             vertical-align: top;
+
+            // padding: 0.2rem 0.5rem;
+
+            // background-color: rgb(68, 180, 68);
+            // border-radius: 2rem;
+            // border-style: solid;
+            // border-width: 1px;
+            // border-color: black;
         }
 
         .cover-title {
@@ -41,17 +49,30 @@
                 vertical-align: top;
             }
 
-            h2, .blog-type {
+            h2 {
                 display: inline;
 
                 vertical-align: top;
                 font-size: 1.8rem;
                 font-family: Kleukens;
                 margin: 0rem 0.5rem;
+                // padding: 0.2rem 0.5rem;
+
+                // background-color: rgb(68, 180, 68);
+                // border-radius: 2rem;
+                // border-style: solid;
+                // border-width: 1px;
+                // border-color: black;
                 // vertical-align: top;
             }
 
-            .work-year, .type {
+
+            .blog-type {
+           
+            }
+
+            .work-year,
+            .type {
                 display: none;
                 // order: 2;
             }
@@ -69,7 +90,7 @@
             width: 100%;
             height: 100%;
         }
-        
+
         img {
             width: 100%;
             height: 100%;
@@ -90,61 +111,105 @@
 }
 
 .blogpostcover {
+    // h1.headline {
+    //     // width: 80vw;
+    //     grid-column: 3/11;
+    //     margin-bottom: 1.5rem;
+
+    //     font-family: Kleukens;
+    //     font-size: 5rem;
+    //     line-height: 4rem;
+    //     margin-bottom: 3.5rem;
+    //     text-align: center;
+
+    // }
+
+    // h2 {
+    //     grid-column: span 2;
+    //     font-family: Kleukens;
+    //     font-size: 1.8rem;
+    // }
+
+    // h2:first-child {
+    //     text-align: right;
+    // }
+
+    // .subhead {
+    //     grid-column: 1/13;
+    //     display: flex;
+    //     justify-content: space-between;
+    //     margin-bottom: 1rem;
+
+    //     h2 {
+    //         // width: 16vw;
+    //         font-family: Kleukens;
+    //         font-size: 1.8rem;
+    //     }
+    // }
+
+    // .cover-image {
+    //     grid-column: 6/8;
+
+    //     div {
+    //         width: 100%;
+    //         height: 100%;
+    //     }
+
+    //     // p{
+    //     //     margin-top: 0.2rem;
+    //     //     font-family: Kleukens;
+    //     //     font-size: 0.8rem;
+    //     // }
+    // }
+
+
+    // width:fit-content;
+    // display: flex;
+    margin-bottom: 5.5rem;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    margin-bottom: 5.5rem;
 
+    h1 {
+        grid-column: 4/11;
 
-    h1.headline {
-        // width: 80vw;
-        grid-column: 3/11;
-        margin-bottom: 1.5rem;
-
-        font-family: Kleukens;
         font-size: 5rem;
-        line-height: 4rem;
-        margin-bottom: 3.5rem;
-        text-align: center;
-
+        font-weight: 90;
+        line-height: 4.5rem;
+        font-family: Kleukens;
+        // width: max-content;
+        // max-width: 70vw;
+        // display:inline-block;
+        vertical-align: top;
     }
 
     h2 {
-        grid-column: span 2;
-        font-family: Kleukens;
+        display: inline;
+
+        vertical-align: top;
         font-size: 1.8rem;
-    }
-
-    h2:first-child {
-        text-align: right;
-    }
-
-    .subhead {
-        grid-column: 1/13;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 1rem;
-
-        h2 {
-            // width: 16vw;
-            font-family: Kleukens;
-            font-size: 1.8rem;
-        }
+        font-family: Kleukens;
+        // margin: 0rem 0.5rem;
+        // vertical-align: top;
     }
 
     .cover-image {
-        grid-column: 6/8;
-
-        div {
-            width: 100%;
-            height: 100%;
-        }
-
-        // p{
-        //     margin-top: 0.2rem;
-        //     font-family: Kleukens;
-        //     font-size: 0.8rem;
-        // }
+        margin: 0rem 1rem;
+        grid-column: 2/4;
+        // max-width: 20vw;
     }
+
+    .date {
+        grid-column: 1/2;
+    }
+
+    .type {
+        grid-column: 11/13;
+        text-align: end;
+
+    }
+
+
+
 
     .fullwidth-image {
         // grid-column: 3/10;
