--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -168,6 +168,7 @@
     margin-bottom: 5.5rem;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+    gap: 1rem;
 
     h1 {
         grid-column: 4/11;
@@ -193,7 +194,7 @@
     }
 
     .cover-image {
-        margin: 0rem 1rem;
+        // margin: 0rem 1rem;
         grid-column: 2/4;
         // max-width: 20vw;
     }
@@ -207,9 +208,6 @@
         text-align: end;
 
     }
-
-
-
 
     .fullwidth-image {
         // grid-column: 3/10;
@@ -240,12 +238,14 @@
     gap: 1rem;
 
     .description {
-        grid-column: span 9;
+        grid-column: 2/12;
         margin-bottom: 3.5rem;
 
         p {
             font-size: 2rem;
             line-height: 2.2rem;
+            font-family: Kleukens;
+
         }
     }
 
