--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -29,9 +29,23 @@
 }
 
 html {
-   // background-color: lightgray;
    color: black;
-   // font-family: Signifier;
    font-family: PPAgrandir;
+   font-size: clamp(10px, 1vw, 16px);
+}
 
+.prom-text {
+   p {
+       font-size: 2rem;
+       line-height: 2.5rem;
+       margin-bottom: 1rem;
+       font-family: Kleukens;
+   }
+}
+
+
+p.caption {
+   margin-top: 0.2rem;
+   font-family: Kleukens;
+   font-size: 1.8rem;
 }
