--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -218,6 +218,14 @@
         div {
             flex-basis: 100%;
         }
+
+        .iFrame{
+            iframe {
+                width: 100%;
+                height: 100%;
+                // border-radius: 0.5rem;
+            }
+        }
     }
 
     .text-section {
