--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -220,9 +220,12 @@
         }
 
         .iFrame{
+            
             iframe {
                 width: 100%;
-                height: 100%;
+                height: 70vh;
+                border-radius: 20rem;
+
                 // border-radius: 0.5rem;
             }
         }
