--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -228,6 +228,10 @@
 
                 // border-radius: 0.5rem;
             }
+
+            p.caption{
+                text-align: center;
+            }
         }
     }
 
