--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -223,8 +223,10 @@
             
             iframe {
                 width: 100%;
-                height: 70vh;
-                border-radius: 20rem;
+                height: 80vh;
+                // height: 70vh;
+                border-radius: 2rem;
+                // zoom: 1.25;
 
                 // border-radius: 0.5rem;
             }
