--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -130,7 +130,7 @@
 .blogpostcover {
     position: sticky;
     top: 2.5rem;
-    margin-bottom: 5.5rem;
+    // margin-bottom: 5.5rem;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 1rem;
@@ -203,7 +203,7 @@
     gap: 1rem;
 
     .description {
-        grid-column: 2/12;
+        grid-column: 4/12;
         margin-bottom: 3.5rem;
 
     }
