--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -155,7 +155,7 @@ body {
          // border-radius: 3rem;
 
          .cover-title {
-            width:fit-content;
+            // width:fit-content;
 
             // h1 {
             //     font-size: 3rem;
