--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -4,19 +4,14 @@
     padding: 0rem 0.5rem;
 
     .project-list {
-        // padding: 0rem 0.5rem;
         margin-top: 3rem;
+        
     }
-
+    
     .project-preview {
-        display: flex;
-
-        align-items: flex-start;
-        width: fit-content;
-        word-wrap: break-word;
-
+        width: 100%;
         margin: 0.5rem 0rem;
-      
+        display: flex;
 
         h2 {
             display: inline;
@@ -25,26 +20,17 @@
             font-family: Kleukens;
             margin: 0rem 0.5rem;
             vertical-align: top;
-
-            // padding: 0.2rem 0.5rem;
-
-            // background-color: rgb(68, 180, 68);
-            // border-radius: 2rem;
-            // border-style: solid;
-            // border-width: 1px;
-            // border-color: black;
         }
 
         .cover-title {
-            // width:fit-content;
-            // display: flex;
-            // margin-bottom: 5.5rem;
-            display: grid;
-            grid-template-columns: repeat(12, 1fr);
+            width:100%;
+
+            display: flex;
+            justify-content: space-between;
             gap: 1rem;
 
             h1 {
-                grid-column: 1/11;
+                // grid-column: 1/11;
 
                 font-size: 5rem;
                 font-weight: 90;
@@ -58,24 +44,17 @@
 
             h2 {
                 display: inline;
+                text-align: end;
 
                 vertical-align: top;
                 font-size: 1.8rem;
                 font-family: Kleukens;
                 margin: 0rem 0.5rem;
-                // padding: 0.2rem 0.5rem;
-
-                // background-color: rgb(68, 180, 68);
-                // border-radius: 2rem;
-                // border-style: solid;
-                // border-width: 1px;
-                // border-color: black;
-                // vertical-align: top;
             }
 
             .cover-image {
                 // margin: 0rem 1rem;
-                grid-column: 2/4;
+                // grid-column: 2/4;
                 // max-width: 20vw;
             }
         
@@ -91,7 +70,6 @@
 
             .work-year {
                 display: none;
-                // order: 2;
             }
 
         }
