--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -1,86 +1,23 @@
-.space-page,
-.space-post,
 .space-section {
     overflow: hidden;
 
     .project-list {
         padding: 0rem 0.5rem;
-        margin-top: 2rem;
-
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        gap: 0.5rem;
     }
 
     .project-preview {
-        display: block;
         width: 100%;
-        grid-column: 1/13;
-
-        // align-items: end;
-        // border-radius: 2rem;
-        h2 {
-            display: inline;
-            // grid-column: span 1;
-            font-family: Kleukens;
-            font-size: 1.8rem;
-            vertical-align: top;
-        }
-
-        .cover-title {
-            z-index: 2;
-            // width: 33vw;
-            display: flex;
-            align-items: flex-start;
-            justify-content: space-between;
-            border-radius: 0rem 0rem 2rem 2rem;
-            // border-radius: 2rem 0rem 0rem 2rem;
-
-            // grid-template-columns: repeat(2, auto);
-            // gap: 0.5rem;
-            // align-items: baseline;
-
-            h1 {
-                // grid-column: 1/4;
-                font-size: 1.7rem;
-                vertical-align: top;
-
-            }
-
-            h2 {
-                display: inline;
-                // grid-column: span 1;
-                font-family: Kleukens;
-                font-size: 1.8rem;
-                vertical-align: top;
-            }
-
-            .title-img {
-                // position: absolute;
-                transform: scale(1.3);
-                width: 100%;
-                // align-self: center;
-                // height:55%;
-                // height: auto;
-                margin-top: 3rem;
-                overflow: visible;
-                // grid-column: 1/3;
-                // order: 3;
-                // height: 100%;
-                // width: 100%;
-
-                img {
-                    object-fit: contain;
-                }
-            }
-        }
+        display: flex;
+        grid-template-columns: repeat(12, 1fr);
+        margin: 0.5rem;
 
         .cover-image {
-            height: 90vh;
-            // width: 66vw;
             grid-column: 1/13;
+            height: 70vh;
+            width: 70vw;
+            grid-column: 5/13;
+            border-radius: 25vw;
 
-            // border-radius: 2rem;
             padding: 0;
             overflow: hidden;
 
@@ -96,34 +33,82 @@
             }
         }
 
-        .blog-year {
-            display: none;
+
+        h2 {
+            display: inline;
+            font-family: Kleukens;
+            font-size: 1.8rem;
+            vertical-align: top;
         }
+
+        .cover-title {
+            z-index: 2;
+            display: flex;
+            align-items: flex-start;
+            margin-right: 1rem;
+
+            h1 {
+                font-size: 1.8rem;
+                vertical-align: top;
+
+            }
+
+            h2 {
+                display: inline;
+                // grid-column: span 1;
+                font-family: Kleukens;
+                font-size: 1.8rem;
+                vertical-align: top;
+            }
+
+            .title-img {
+                transform: scale(1.3);
+                width: 100%;
+                margin-top: 3rem;
+                overflow: visible;
+
+                img {
+                    object-fit: contain;
+                }
+            }
+
+            .work-year {
+                display: none;
+            }
+        }
+
+
+    
     }
 
     .deep-sea-bots {
         .cover-image {
+            background-color: rgba(255, 255, 255, 0.5);
+            overflow: hidden;
             .image-section {
+                // overflow: visible;
                 iframe {
-                    width: 134%;
-                    height: 134%;
-                    zoom: 0.75;
+                    // overflow: visible;
+                    width: calc(100% * 2.2);
+                    height: calc(100% * 2);
+                    zoom: 0.5;
 
-                    -ms-zoom: 0.75;
-                    transform: scale(0.75);
+                    -ms-zoom: 0.5;
+                    transform: scale(0.5) translateX(-200px);
 
-                    -moz-transform: scale(0.75);
-                    -moz-transform-origin: 0 0;
-                    -o-transform: scale(0.75);
-                    -o-transform-origin: 0 0;
-                    -webkit-transform: scale(0.75);
-                    -webkit-transform-origin: 0 0;
+                    -moz-transform: scale(0.5);
+                    -moz-transform-origin: -200px 0;
+                    -o-transform: scale(0.5);
+                    -o-transform-origin: -200px 0;
+                    -webkit-transform: scale(0.5);
+                    -webkit-transform-origin: -200px 0;
 
                 }
             }
 
         }
     }
+
 
 
     h1 {
@@ -146,106 +131,23 @@
     }
 }
 
-.space-page,
 .space-post {
     width: 100vw;
     min-height: 100vh;
     padding-bottom: 10vh;
-}
-
-.space-section {
-    .project-preview {
-        display: flex;
-        grid-template-columns: repeat(12, 1fr);
-        margin: 0.5rem;
-
-        .cover-image {
-            height: 70vh;
-            width: 70vw;
-            grid-column: 5/13;
-            border-radius: 20rem;
-            // border-radius: 0rem 2rem 2rem 0rem;
-            // order: 2;
-        }
-
-        .cover-title {
-            grid-column: 1/5;
-            margin-right: 1rem;
-            // order: 1;
-            // width: 30vw;
-            height: 50%;
-            // width: calc(100% - 2rem);
-            // padding: 1rem;
-
-            .work-year {
-                display: none;
-            }
-        }
-
-    }
-
-    .deep-sea-bots {
-        // background-color: white;
-        // position: fixed;
-        // right: -15rem;
-        // z-index: 10;
-        // overflow: visible;
-        // mix-blend-mode: difference;
-        // background-color: #e8e6e69b;
-
-
-        .cover-image {
-            background-color: rgba(255, 255, 255, 0.5);
-            // mix-blend-mode: difference;
-            // overflow: visible;
-            // border-radius: 0rem 2rem 2rem 0rem;
-
-            overflow: hidden;
-
-            .image-section {
-                // filter: brightness(1.5);
-                overflow: visible;
-
-                // filter:hue-rotate(180deg);
-                // mix-blend-mode: difference;
-                // mix-blend-mode:luminosity;
-
-                iframe {
-                    overflow: visible;
-
-                    // mask-type: luminance;
-                    /* white = transparent, grays = semi-transparent, black = opaque */
-                    // mask-type: alpha;
-
-                    width: calc(100% * 2.2);
-                    height: calc(100% * 2);
-                    zoom: 0.5;
-
-                    -ms-zoom: 0.5;
-                    transform: scale(0.5);
-
-                    -moz-transform: scale(0.5);
-                    -moz-transform-origin: 0 0;
-                    -o-transform: scale(0.5);
-                    -o-transform-origin: 0 0;
-                    -webkit-transform: scale(0.5);
-                    -webkit-transform-origin: 0 0;
-
-                }
-            }
-
-        }
-    }
-
-}
-
-.space-post {
     padding: 0.5rem;
+    padding-top: 2rem;
 
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 0.5rem;
+    .project-preview {
+        .cover-image {
+            height: 90vh;
+            width: 100vw;
+        }
+    }
 }
+
+
+
 
 .space-post-content {
     padding: 1rem;
