--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -12,6 +12,7 @@
         width: 100%;
         margin: 0.5rem 0rem;
         display: flex;
+        align-items: flex-start;
 
         h2 {
             display: inline;
@@ -27,12 +28,14 @@
 
             display: flex;
             justify-content: space-between;
+            align-items: flex-start;
             gap: 1rem;
 
             h1 {
                 // grid-column: 1/11;
 
-                font-size: 5rem;
+                font-size: 3rem;
+                // font-size: 5rem;
                 font-weight: 90;
                 line-height: 4.5rem;
                 font-family: Kleukens;
@@ -96,7 +99,7 @@
 
 .blog-page {
     min-height: 100vh;
-    width: 100vw;
+    // width: 100vw;
 }
 
 .blog-post {
@@ -106,8 +109,8 @@
 }
 
 .blogpostcover {
-    position: sticky;
-    top: 2.5rem;
+    // position: sticky;
+    // top: 2.5rem;
     // margin-bottom: 5.5rem;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
