--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -17,17 +17,17 @@
         h2 {
             display: inline;
 
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             font-family: Kleukens;
             margin: 0rem 0.5rem;
             vertical-align: top;
         }
 
         .cover-title {
-            width:100%;
+            // width:100%;
 
             display: flex;
-            justify-content: space-between;
+            // justify-content: space-between;
             align-items: flex-start;
             gap: 1rem;
 
@@ -35,11 +35,14 @@
                 // grid-column: 1/11;
 
                 font-size: 3rem;
+                line-height: 3rem;
+                // font-size: 3.5rem;
+                // line-height: 3.65rem;
                 // font-size: 5rem;
+                // line-height: 4.5rem;
                 font-weight: 90;
-                line-height: 4.5rem;
                 font-family: Kleukens;
-                width: max-content;
+                // width: max-content;
                 max-width: 70vw;
                 // display:inline-block;
                 vertical-align: top;
@@ -50,7 +53,7 @@
                 text-align: end;
 
                 vertical-align: top;
-                font-size: 1.8rem;
+                font-size: 1.5rem;
                 font-family: Kleukens;
                 margin: 0rem 0.5rem;
             }
@@ -80,8 +83,9 @@
 
     .cover-image {
         // align-self: flex-end;
-        height: 4rem;
-        width: max-content;
+        height: 3rem;
+        // width: 5rem;
+        // width: max-content;
         margin: 0rem 0.5rem;
 
         div {
