--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
         // padding: 2rem 0rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 0.5rem;
     }
 
     .work-section,
