--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -7,14 +7,19 @@
 
     .project-preview {
         width: 100%;
+        height: 100%;
+        // max-height: 80vh;
+        height: 40vh;
+
         display: flex;
         grid-template-columns: repeat(12, 1fr);
         margin: 0.5rem;
 
         .cover-image {
+            position: relative;
             grid-column: 1/13;
-            height: 70vh;
-            width: 70vw;
+            height: 90%;
+            width: 80%;
             grid-column: 5/13;
             border-radius: 25vw;
 
@@ -37,11 +42,12 @@
         h2 {
             display: inline;
             font-family: Kleukens;
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             vertical-align: top;
         }
 
         .cover-title {
+            width: 40%;
             z-index: 2;
             display: flex;
             align-items: flex-start;
@@ -57,13 +63,14 @@
                 display: inline;
                 // grid-column: span 1;
                 font-family: Kleukens;
-                font-size: 1.8rem;
+                font-size: 1.5rem;
                 vertical-align: top;
             }
 
             .title-img {
                 transform: scale(1.3);
-                width: 100%;
+                // width: 100%;
+                height:fit-content;
                 margin-top: 3rem;
                 overflow: visible;
 
@@ -82,6 +89,7 @@
     }
 
     .deep-sea-bots {
+        // margin-top: 30vh;
         .cover-image {
             background-color: rgba(255, 255, 255, 0.5);
             overflow: hidden;
@@ -89,26 +97,24 @@
                 // overflow: visible;
                 iframe {
                     // overflow: visible;
-                    width: calc(100% * 2.2);
-                    height: calc(100% * 2);
+                    width: calc(100% * 4.4);
+                    height: calc(100% * 4);
                     zoom: 0.5;
 
-                    -ms-zoom: 0.5;
-                    transform: scale(0.5) translateX(-200px);
+                    -ms-zoom: 0.25;
+                    transform: scale(0.5) translateX(-2%);
 
-                    -moz-transform: scale(0.5);
-                    -moz-transform-origin: -200px 0;
-                    -o-transform: scale(0.5);
-                    -o-transform-origin: -200px 0;
-                    -webkit-transform: scale(0.5);
-                    -webkit-transform-origin: -200px 0;
+                    -moz-transform: scale(0.25);
+                    -moz-transform-origin: -2% 0;
+                    -o-transform: scale(0.25);
+                    -o-transform-origin: -2% 0;
+                    -webkit-transform: scale(0.25);
+                    -webkit-transform-origin: -2% 0;
 
                 }
             }
-
         }
     }
-
 
 
     h1 {
@@ -144,10 +150,63 @@
             width: 100vw;
         }
     }
+
+    .deep-sea-bots {
+        .cover-image {
+            background-color: rgba(255, 255, 255, 0.5);
+            overflow: hidden;
+            .image-section {
+                // overflow: visible;
+                iframe {
+                    // overflow: visible;
+                    width: calc(100% * 2.2);
+                    height: calc(100% * 2);
+                    zoom: 0.5;
+
+                    -ms-zoom: 0.5;
+                    transform: scale(0.5) translateX(-200px);
+
+                    -moz-transform: scale(0.5);
+                    -moz-transform-origin: -200px 0;
+                    -o-transform: scale(0.5);
+                    -o-transform-origin: -200px 0;
+                    -webkit-transform: scale(0.5);
+                    -webkit-transform-origin: -200px 0;
+
+                }
+            }
+        }
+    }
 }
 
+.full-width{
+    .deep-sea-bots {
+        .cover-image {
+            background-color: rgba(255, 255, 255, 0.5);
+            overflow: hidden;
+            .image-section {
+                // overflow: visible;
+                iframe {
+                    // overflow: visible;
+                    width: calc(100% * 2.2);
+                    height: calc(100% * 2);
+                    zoom: 0.5;
 
+                    -ms-zoom: 0.5;
+                    transform: scale(0.5) translateX(-200px);
 
+                    -moz-transform: scale(0.5);
+                    -moz-transform-origin: -200px 0;
+                    -o-transform: scale(0.5);
+                    -o-transform-origin: -200px 0;
+                    -webkit-transform: scale(0.5);
+                    -webkit-transform-origin: -200px 0;
+
+                }
+            }
+        }
+    }
+}
 
 .space-post-content {
     padding: 1rem;
