--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -5,35 +5,21 @@
 
     .project-list {
         margin-top: 3rem;
-        
+
     }
-    
+
     .project-preview {
         width: 100%;
-        margin: 0.5rem 0rem;
-        display: flex;
-        align-items: flex-start;
-
-        h2 {
-            display: inline;
-
-            font-size: 1.5rem;
-            font-family: Kleukens;
-            margin: 0rem 0.5rem;
-            vertical-align: top;
-        }
-
-        .cover-title {
-            // width:100%;
-
+        
+        .preview-title {
+            margin: 0.5rem 0rem;
+            
             display: flex;
-            // justify-content: space-between;
             align-items: flex-start;
-            gap: 1rem;
+            gap: 0.5rem;
 
             h1 {
-                // grid-column: 1/11;
-
+    
                 font-size: 3rem;
                 line-height: 3rem;
                 // font-size: 3.5rem;
@@ -43,60 +29,68 @@
                 font-weight: 90;
                 font-family: Kleukens;
                 // width: max-content;
-                max-width: 70vw;
+                // max-width: 40vw;
                 // display:inline-block;
                 vertical-align: top;
+                margin-top: -0.3rem;
             }
-
+    
             h2 {
                 display: inline;
                 text-align: end;
-
+    
                 vertical-align: top;
                 font-size: 1.5rem;
                 font-family: Kleukens;
-                margin: 0rem 0.5rem;
+                // margin: 0rem 0.5rem;
             }
-
-            .cover-image {
-                // margin: 0rem 1rem;
-                // grid-column: 2/4;
-                // max-width: 20vw;
-            }
-        
+    
             .date {
                 grid-column: 1/2;
             }
-        
+    
             .type {
                 grid-column: 11/13;
                 text-align: end;
-        
+    
             }
-
+    
             .work-year {
                 display: none;
             }
-
+    
+            // }
+            .cover-image {
+                // align-self: flex-end;
+                // height: 3rem;
+                max-width: 6rem;
+                height: 3rem;
+                // width: fit-content;
+                // margin: 0rem 0.5rem;
+                object-fit: contain;
+                
+                div {
+                    width: 100%;
+                    height: 100%;
+                    img {
+                        object-fit: contain;
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                
+            }
         }
+
     }
 
-    .cover-image {
-        // align-self: flex-end;
-        height: 3rem;
-        // width: 5rem;
-        // width: max-content;
-        margin: 0rem 0.5rem;
 
-        div {
-            width: 100%;
-            height: 100%;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
+    .project-preview:hover {
+        .project-description {
+            flex-basis: 100%;
+            // margin-top: 0vh;
+            display: block;
+            // width: 100%;
         }
     }
 }
@@ -204,8 +198,8 @@
             flex-basis: 100%;
         }
 
-        .iFrame{
-            
+        .iFrame {
+
             iframe {
                 width: 100%;
                 height: 80vh;
@@ -213,7 +207,7 @@
                 // zoom: 1.25;
             }
 
-            p.caption{
+            p.caption {
                 text-align: center;
             }
         }
