--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -6,52 +6,45 @@
     }
 
     .project-preview {
+
+        // display: flex;
+        // grid-template-columns: repeat(12, 1fr);
+        margin: 0.5rem;
         width: 100%;
         height: 100%;
-        // max-height: 80vh;
         height: 40vh;
 
-        display: flex;
-        grid-template-columns: repeat(12, 1fr);
-        margin: 0.5rem;
+        .preview-title {
+            width: 100%;
+            // height: 100%;
+            height: 40vh;
 
-        .cover-image {
-            position: relative;
-            grid-column: 1/13;
-            height: 90%;
-            width: 80%;
-            grid-column: 5/13;
-            border-radius: 25vw;
-
-            padding: 0;
-            overflow: hidden;
-
-            .image-section {
-                width: 100%;
-                height: 100%;
-
-                iframe {
-                    width: 100%;
-                    height: 100%;
-                    // border-radius: 0.5rem;
-                }
-            }
-        }
-
-
-        h2 {
-            display: inline;
-            font-family: Kleukens;
-            font-size: 1.5rem;
-            vertical-align: top;
-        }
-
-        .cover-title {
-            width: 40%;
-            z-index: 2;
             display: flex;
             align-items: flex-start;
-            margin-right: 1rem;
+
+            .cover-image {
+                position: relative;
+                grid-column: 1/13;
+                height: 90%;
+                width: 100%;
+                grid-column: 5/13;
+                border-radius: 25vw;
+
+                padding: 0;
+                overflow: hidden;
+
+                .image-section {
+                    width: 100%;
+                    height: 100%;
+
+                    iframe {
+                        width: 100%;
+                        height: 100%;
+                        // border-radius: 0.5rem;
+                    }
+                }
+            }
+
 
             h1 {
                 font-size: 1.8rem;
@@ -69,8 +62,8 @@
 
             .title-img {
                 transform: scale(1.3);
-                // width: 100%;
-                height:fit-content;
+                width: 35%;
+                height: fit-content;
                 margin-top: 3rem;
                 overflow: visible;
 
@@ -84,37 +77,39 @@
             }
         }
 
-
-    
     }
 
     .deep-sea-bots {
-        // margin-top: 30vh;
-        .cover-image {
-            background-color: rgba(255, 255, 255, 0.5);
-            overflow: hidden;
-            .image-section {
-                // overflow: visible;
-                iframe {
+        .preview-title {
+            .cover-image {
+                background-color: rgba(255, 255, 255, 0.5);
+                overflow: hidden;
+
+                .image-section {
+
                     // overflow: visible;
-                    width: calc(100% * 4.4);
-                    height: calc(100% * 4);
-                    zoom: 0.5;
+                    iframe {
+                        // overflow: visible;
+                        width: calc(100% * 4.4);
+                        height: calc(100% * 4);
+                        zoom: 0.5;
 
-                    -ms-zoom: 0.25;
-                    transform: scale(0.5) translateX(-2%);
+                        -ms-zoom: 0.25;
+                        transform: scale(0.5) translateX(-2%);
 
-                    -moz-transform: scale(0.25);
-                    -moz-transform-origin: -2% 0;
-                    -o-transform: scale(0.25);
-                    -o-transform-origin: -2% 0;
-                    -webkit-transform: scale(0.25);
-                    -webkit-transform-origin: -2% 0;
+                        -moz-transform: scale(0.25);
+                        -moz-transform-origin: -2% 0;
+                        -o-transform: scale(0.25);
+                        -o-transform-origin: -2% 0;
+                        -webkit-transform: scale(0.25);
+                        -webkit-transform-origin: -2% 0;
 
+                    }
                 }
             }
         }
     }
+
 
 
     h1 {
@@ -155,7 +150,9 @@
         .cover-image {
             background-color: rgba(255, 255, 255, 0.5);
             overflow: hidden;
+
             .image-section {
+
                 // overflow: visible;
                 iframe {
                     // overflow: visible;
@@ -179,12 +176,14 @@
     }
 }
 
-.full-width{
+.full-width {
     .deep-sea-bots {
         .cover-image {
             background-color: rgba(255, 255, 255, 0.5);
             overflow: hidden;
+
             .image-section {
+
                 // overflow: visible;
                 iframe {
                     // overflow: visible;
