--- a/src/components/project/project-preview.scss
+++ b/src/components/project/project-preview.scss
@@ -9,4 +9,9 @@
     flex-shrink: 0;
     display: none;
     transition: all 0.5s ease;
+
+    font-family: Kleukens;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+
 }
