--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -89,7 +89,7 @@
         .project-description {
             flex-basis: 100%;
             // margin-top: 0vh;
-            display: block;
+            // display: block;
             // width: 100%;
         }
     }
