--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -8,9 +8,9 @@
         // padding: 0rem 0.5rem;
         // margin-top: 1rem;
 
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        gap: 0.5rem;
+        // display: grid;
+        // grid-template-columns: repeat(3, minmax(0, 1fr));
+        // gap: 0.5rem;
 
         a {
             height: max-content;
