--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -63,8 +63,8 @@
             .cover-image {
                 // align-self: flex-end;
                 // height: 3rem;
-                max-width: 6rem;
-                height: 3rem;
+                // max-width: 6rem;
+
                 // width: fit-content;
                 // margin: 0rem 0.5rem;
                 object-fit: contain;
@@ -74,8 +74,12 @@
                     height: 100%;
                     img {
                         object-fit: contain;
-                        width: 100%;
-                        height: 100%;
+                        height: 10vh;
+
+                        // width: 100%;
+                        // height: 100%;
+                        border-radius: 1rem;
+
                     }
                 }
                 
