--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -60,30 +60,61 @@
             }
     
             // }
-            .cover-image {
-                // align-self: flex-end;
-                // height: 3rem;
-                // max-width: 6rem;
+            // .cover-image {
+            //     // align-self: flex-end;
+            //     // height: 3rem;
+            //     // max-width: 6rem;
 
-                // width: fit-content;
-                // margin: 0rem 0.5rem;
-                object-fit: contain;
+            //     // width: fit-content;
+            //     // margin: 0rem 0.5rem;
+            //     object-fit: contain;
                 
-                div {
+            //     div {
+            //         width: 100%;
+            //         height: 100%;
+            //         img {
+            //             object-fit: contain;
+            //             height: 6vh;
+
+            //             // width: 100%;
+            //             // height: 100%;
+            //             border-radius: 1rem;
+
+            //         }
+            //     }
+                
+            // }
+
+            .cover-image {
+                // width: min-content;
+                // order: 2;
+                transition: all 0.25s ease;
+                margin-bottom: 0.5rem;
+                // width: 100%;
+                margin: 0rem;
+                padding: 0rem;
+
+                .image-section,
+                .video-section,
+                .gatsby-image-wrapper {
+                    object-fit: contain;
+                    object-position: center center;
                     width: 100%;
                     height: 100%;
-                    img {
-                        object-fit: contain;
-                        height: 6vh;
-
-                        // width: 100%;
-                        // height: 100%;
-                        border-radius: 1rem;
-
-                    }
+                    
                 }
                 
+                img,
+                video {
+                    width: auto;
+                    height: 6vh;
+                    object-fit:contain;
+                    object-position: center center;
+                    border-radius: 1rem;
+
+                }
             }
+
         }
 
     }
