--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -13,13 +13,15 @@
         
         .preview-title {
             margin: 0.5rem 0rem;
-            
+            margin-bottom: 0rem;
+
             display: flex;
             align-items: flex-start;
             gap: 0.5rem;
+            transition: all 0.5s ease;
 
             h1 {
-    
+
                 font-size: 3rem;
                 line-height: 3rem;
                 // font-size: 3.5rem;
@@ -29,61 +31,35 @@
                 font-weight: 90;
                 font-family: Kleukens;
                 // width: max-content;
-                // max-width: 40vw;
+                max-width: 35vw;
                 // display:inline-block;
                 vertical-align: top;
-                margin-top: -0.3rem;
+                margin-top: -0.2rem;
             }
-    
+
             h2 {
                 display: inline;
                 text-align: end;
-    
+
                 vertical-align: top;
                 font-size: 1.5rem;
                 font-family: Kleukens;
                 // margin: 0rem 0.5rem;
             }
-    
+
             .date {
                 grid-column: 1/2;
             }
-    
+
             .type {
                 grid-column: 11/13;
                 text-align: end;
-    
+
             }
-    
+
             .work-year {
                 display: none;
             }
-    
-            // }
-            // .cover-image {
-            //     // align-self: flex-end;
-            //     // height: 3rem;
-            //     // max-width: 6rem;
-
-            //     // width: fit-content;
-            //     // margin: 0rem 0.5rem;
-            //     object-fit: contain;
-                
-            //     div {
-            //         width: 100%;
-            //         height: 100%;
-            //         img {
-            //             object-fit: contain;
-            //             height: 6vh;
-
-            //             // width: 100%;
-            //             // height: 100%;
-            //             border-radius: 1rem;
-
-            //         }
-            //     }
-                
-            // }
 
             .cover-image {
                 // width: min-content;
@@ -101,14 +77,14 @@
                     object-position: center center;
                     width: 100%;
                     height: 100%;
-                    
+
                 }
-                
+
                 img,
                 video {
                     width: auto;
                     height: 6vh;
-                    object-fit:contain;
+                    object-fit: contain;
                     object-position: center center;
                     border-radius: 1rem;
 
@@ -121,6 +97,12 @@
 
 
     .project-preview:hover {
+ 
+        .cover-image {
+            transform: scale(1.5);
+            z-index: 10;
+        }
+
         .project-description {
             flex-basis: 100%;
             // margin-top: 0vh;
@@ -129,6 +111,12 @@
         }
     }
 }
+
+.blog-section.hero {
+    background-color: coral;
+}
+
+
 
 .blog-page {
     min-height: 100vh;
