--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -189,20 +189,20 @@
 
 }
 
-.hero.work-section{
-    // display: grid;
-    // grid-template-columns: 1fr 1fr;
+// .hero.work-section{
+//     // display: grid;
+//     // grid-template-columns: 1fr 1fr;
 
-    .project-list{
-        .div{
-            grid-column: span 1;
+//     .project-list{
+//         .div{
+//             grid-column: span 1;
 
-        }
-        .full-width {
-            grid-column: span 1;
-        }
-    }
-}
+//         }
+//         .full-width {
+//             grid-column: span 1;
+//         }
+//     }
+// }
 
 .work-page {
     min-height: 100vh;
