--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -178,18 +178,18 @@
     }
 }
 
-.hero {
-    .project-preview {
-        .preview-title {
-            height: 70vh;
+// .hero {
+//     .project-preview {
+//         .preview-title {
+//             height: 70vh;
 
-            .title-img {
-                // transform: scale(1);
-                width: 25%;
-            }
-        }
-    }
-}
+//             .title-img {
+//                 // transform: scale(1);
+//                 width: 25%;
+//             }
+//         }
+//     }
+// }
 
 .full-width {
     .deep-sea-bots {
