--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,3 +1,17 @@
+.about-page{
+    background-color: #e8e6e6;
+    margin: 0.5rem;
+    margin-top: 2rem;
+    min-height: 100vh;
+    padding: 1rem;
+    border-radius: 1rem;
+    
+    .about-content{
+        
+    }
+
+}
+
 .blog-page,
 .blog-section {
     overflow: hidden;
