--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -4,10 +4,15 @@
 
 .layout {
     overflow: auto;
-    nav {
+    // padding-bottom: 10vh;
+
+    .nav-header{
         position: fixed;
+    }
+
+    nav {
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         z-index: 10;
         padding: 0.3rem;
         width: calc(100vw - 0.6rem);
@@ -17,9 +22,13 @@
         }
 
         ul {
+            display: flex;
+
             li {
                 border-radius: 1rem;
                 padding: 0.2rem 0.5rem;
+                // background-color: rgb(255, 255, 255);
+
             }
         }
 
@@ -28,9 +37,7 @@
         }
     }
 
-    .nav-meta {
-        display: flex;
-
+    .nav-meta, .nav-footer {
         li {
             background-color: rgb(255, 255, 255);
         }
@@ -151,5 +158,6 @@
         }
 
     }
+
 
 }
