--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,7 +2,7 @@
     background-color: #e8e6e6;
     margin: 0.5rem;
     margin-top: 2rem;
-    min-height: 100vh;
+    // min-height: 100vh;
     padding: 1rem;
     border-radius: 1rem;
 
@@ -11,7 +11,7 @@
     gap: 1rem;
 
     div {
-        grid-column: 4/12;
+        grid-column: 4/11;
     }
 
     h1, h2{
@@ -23,6 +23,13 @@
         font-family: Kleukens;
         font-size: 1.5rem;
         line-height: 1.8rem;
+        margin-bottom: 10vh;
+    }
+
+    p, li{
+        font-family: Kleukens;
+        font-size: 1.5rem;
+        line-height: 1.8rem;   
     }
 
 }
